# seppo

./: .gitignore  ALIGNMENT_PLAN.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  sykli.rs
.github/workflows/: ci.yml  sykli.yml
examples/: rauta_integration_test.rs
seppo-macros/: Cargo.toml
seppo-macros/src/: lib.rs
src/: assertions.rs  cluster.rs  config.rs  context.rs  diagnostics.rs  environment.rs  eventually.rs  fixtures.rs  import.rs  lib.rs  metrics.rs  portforward.rs  runner.rs  scenario.rs  stack.rs  telemetry.rs  traffic.rs  wait.rs
src/context/: context_assertions.rs  crud.rs  debug.rs  diagnostics_ctx.rs  dynamic.rs  exec.rs  forwarding.rs  ingress.rs  lifecycle.rs  logs.rs  mod.rs  network.rs  parsing.rs  patching.rs  rbac.rs  readiness.rs  retry.rs  scenarios.rs  secrets.rs  stack_deploy.rs  traffic_types.rs  types.rs  waiting.rs  workload.rs
src/provider/: existing.rs  kind.rs  minikube.rs  mod.rs
tests/: macro_test.rs
