[package]
name = "seppo"
version = "0.1.0"
edition = "2021"
authors = ["Yair <yair@example.com>"]
license = "Apache-2.0"
description = "Kubernetes testing framework with multi-cloud cluster management"
repository = "https://github.com/you/seppo"
keywords = ["kubernetes", "testing", "kind", "eks", "integration-tests"]
categories = ["development-tools::testing"]

[workspace]
members = [".", "seppo-macros"]

[lib]
name = "seppo"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# K8s client
kube = { version = "2.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.26", features = ["v1_30"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization (for JSON APIs, not config files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

# Macros
seppo-macros = { path = "seppo-macros" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

# === Sykli CI ===
[[bin]]
name = "sykli"
path = "sykli.rs"

[features]
sykli = ["dep:sykli-sdk"]

[dependencies.sykli-sdk]
package = "sykli"
path = "../sykli/sdk/rust"
optional = true
